# camerastreaming

./: README.md
JanusWebRTCStreamer/: CMakeLists.txt  cameramanager.cpp  cameramanager.h  cameraparams.h  httpserver.cpp  httpserver.h  janusconnector.cpp  janusconnector.h  loggingwebpage.cpp  loggingwebpage.h  main.cpp  resources.qrc  templateloader.cpp  templateloader.h
JanusWebRTCStreamer/scripts/: janus.js  simple_stream.js  web-rtc.js
JanusWebRTCStreamer/templates/: simple_stream.html  streaming.html
